--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+	height: 100%;
+	width: 100%;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+	margin: 8px 0;
+	}
+
+	p {
+	margin: 0;
+	}
+}
+
+*, *:before, *:after {
+	box-sizing: border-box;
+}
