set:add_skeleton

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,6 @@ html, body {
 *, *:before, *:after {
 	box-sizing: border-box;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
