--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<mat-selection-list [(ngModel)]="selectedUser" [multiple]="false">
+<mat-selection-list [(ngModel)]="selectedUser" [multiple]="false" (ngModelChange)="onSelection($event)">
   <mat-list-option *ngFor="let user of (users$ | async) as users; trackBy:identify" [value]="user" [selected]="user === users[0]">
     {{ user.username }}
   </mat-list-option>
