--- a/src/app/user-profiles-wrapper/user-profiles-wrapper.component.scss
+++ b/src/app/user-profiles-wrapper/user-profiles-wrapper.component.scss
@@ -3,5 +3,21 @@
 
   &_side {
     width: 300px;
+    @media screen and (max-width: 500px) {
+      width: 100%;
+    }
+  }
+
+  &_details {
+    .mobile-burger {
+      position: absolute;
+      top: 0;
+      left: 0;
+    }
+    .is-hidden {
+      display: none;
+    }    
   }
 }
+
+
