--- a/src/app/components/user-posts/user-posts.component.html
+++ b/src/app/components/user-posts/user-posts.component.html
@@ -1,1 +1,10 @@
-<p>user-posts works!</p>
+<section class="posts">
+  <mat-card class="example-card" *ngFor="let post of (posts$ | async) as posts; trackBy:identify">
+    <mat-card-header>
+      <mat-card-title>{{ post.title | emoji:'star'}}</mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+      <p>{{ post.body }}</p>
+    </mat-card-content>
+  </mat-card>
+</section>
