--- a/src/app/components/user-profiles-wrapper/user-profiles-wrapper.component.scss
+++ b/src/app/components/user-profiles-wrapper/user-profiles-wrapper.component.scss
@@ -1,23 +1,65 @@
 .main-container {
   height: 100%;
 
-  &_side {
+  &__side {
     width: 300px;
     @media screen and (max-width: 500px) {
       width: 100%;
     }
   }
 
-  &_details {
+  &__details {
     .mobile-burger {
       position: absolute;
-      top: 0;
-      left: 0;
+      top: 12px;
+      right: 80px;
     }
     .is-hidden {
       display: none;
-    }    
+    }
+  }
+
+  &__details {
+    &__tab-list {
+      height: 100%;
+
+      &__user-posts {
+        ::ng-deep .posts {
+          padding: 16px;
+          display: flex;
+          gap: 8px;
+          background: unset;
+          flex-direction: column;
+
+          mat-card {
+            background: unset;
+            color: #2c2c2c;
+            box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 0%), 0px 1px 1px 0px rgb(0 0 0 / 6%), 0px 1px 3px 0px rgb(0 0 0 / 16%);
+            .mat-card-header-text {
+              margin: 0;
+              .mat-card-title {
+                font-size: 16px;
+              }
+            }
+          }
+        }
+      }
+
+      ::ng-deep .mat-tab-group {
+        height: 100%;
+
+        .mat-tab-body-wrapper {
+          height: 100%;
+
+          .mat-tab-body {
+            height: 100%;
+
+            .mat-tab-body-content {
+              height: 100%;
+            }
+          }
+        }
+      }
+    }
   }
 }
-
-
