--- a/src/app/components/user-page/user-page.component.scss
+++ b/src/app/components/user-page/user-page.component.scss
@@ -8,18 +8,20 @@
     line-height: 30px;
     font-size: 16px;
     color: grey;
-
-    div {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      padding-right: 52px;
-    }
+  }
+  
+  &__info {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 52px;
   }
 
   &__avatar {
+    max-height: 100px;
     height: 100px;
     min-width: 100px;
+    width: 100px;
     background: grey;
     text-align: center;
     line-height: 100px;
