--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <app-user-profiles-wrapper appFlow>
 </app-user-profiles-wrapper>
+<ng-template>
+  Do you have 18+ ?
+  <div mat-dialog-actions>
+    <button mat-button mat-dialog-close cdkFocusInitial style="width:100%">Yes</button>
+  </div>
+</ng-template>
